--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,9 +1,9 @@
 ---
-greetings: "Hello"
+greetings: "Hi"
 icon: "waving-hand.png"
-title: "I'm a Gatsby Starter"
-subtitlePrefix: "I create awesome "
-subtitle: "one-page portfolios"
+title: "I'm Winson"
+subtitlePrefix: "An ambitious, inquisitive "
+subtitle: "software developer"
 ---
 
 A modern portfolio with a minimalistic design.
