--- a/content/index/interests/interests.mdx
+++ b/content/index/interests/interests.mdx
@@ -5,27 +5,27 @@ title: "Skills"
 export const shownItems = 5
 export const interests = [
   {
-    name: "Quick and Easy Setup",
-    icon: "./icons/joystick.png",
+    name: "Javascript",
+    icon: "./icons/js.png",
   },
   {
-    name: "Content via Markdown",
+    name: "NodeJS",
     icon: "./icons/notebook.png",
   },
   {
-    name: "Responsive Design",
+    name: "HTML",
     icon: "./icons/nail-polish.png",
   },
   {
-    name: "Medium Integration",
+    name: "CSS",
     icon: "./icons/medium.png",
   },
   {
-    name: "Animations",
-    icon: "./icons/gem-stone.png",
+    name: "React",
+    icon: "./icons/react.png",
   },
   {
-    name: "PWA (Offline Support)",
+    name: "React Native",
     icon: "./icons/mobile-phone.png",
   },
   {
