--- a/content/index/projects/easy-setup/index.mdx
+++ b/content/index/projects/easy-setup/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Add content and deploy!"
-category: "Easy and Quick Setup"
+title: "WBK Method"
+category: null
 emoji: "🕹️"
 screenshot: "./clement-h-95YRwf6CNw8-unsplash.jpg"
 github: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
 external: "https://unsplash.com/@clemhlrdt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
 tags:
-  - Content Integration
-  - Ready-2-Deploy
+  - React Native
+  - AWS
 visible: true
 position: 1
 ---
