--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Issues?"
-name: "Gatsby Starter Portfolio Minimal"
-email: "mail@example.com"
+title: "Contact Me"
+name: "Winson Chan"
+email: "chanw835@gmail.com"
 profileImage: "../../favicon.png"
 ---
 
