--- a/content/index/projects/content-integration/index.mdx
+++ b/content/index/projects/content-integration/index.mdx
@@ -1,15 +1,17 @@
 ---
-title: "No external CMS needed!"
-category: "Markdown Content"
-emoji: "📓"
+title: "Backseat Driver"
+category: null
+emoji: null
 screenshot: "./mdx-example.png"
-github: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
-external: "https://www.gatsbyjs.org/docs/mdx/writing-pages/"
+github: "https://github.com/2009-fsa-cs-sennas-strikers/Backseat-Driver"
+external: "https://backseat-driver-dbc21.web.app/"
 tags:
-  - Markdown
-  - Fully Customizable
+  - React
+  - NodeJS
+  - ThreeJS
+  - Firebase
 visible: true
 position: 2
 ---
 
-This starter uses MDX to integrate your content. MDX is basically a Markdown format that allows you to enrich your content with React components. This makes it fully customizable without external dependencies.
+A 3D driving simulation which utilizes user voice commands to control vehicle movement.
