--- a/content/index/projects/projects.mdx
+++ b/content/index/projects/projects.mdx
@@ -3,6 +3,6 @@ title: "Projects"
 visible: true
 position: 0
 buttonVisible: false
-buttonText: "Visit Project on GitHub"
-buttonUrl: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
+buttonText: "Visit GitHub"
+buttonUrl: "https://github.com/winsonchan835"
 ---
