more progress on site, all template data scrubbed

--- a/content/index/interests/interests.mdx
+++ b/content/index/interests/interests.mdx
@@ -2,23 +2,23 @@
 title: "Skills"
 ---
 
-export const shownItems = 5
+export const shownItems = 9
 export const interests = [
   {
     name: "Javascript",
     icon: "./icons/js.png",
   },
   {
-    name: "NodeJS",
-    icon: "./icons/notebook.png",
+    name: "Node.JS",
+    icon: "./icons/node.png",
   },
   {
-    name: "HTML",
-    icon: "./icons/nail-polish.png",
+    name: "HTML5",
+    icon: "./icons/html.png",
   },
   {
-    name: "CSS",
-    icon: "./icons/medium.png",
+    name: "CSS3",
+    icon: "./icons/css.png",
   },
   {
     name: "React",
@@ -26,15 +26,19 @@ export const interests = [
   },
   {
     name: "React Native",
-    icon: "./icons/mobile-phone.png",
+    icon: "./icons/react.png",
   },
   {
-    name: "Modern Tech-Stack",
-    icon: "./icons/gatsby.png",
+    name: "Express",
+    icon: "./icons/express.png",
   },
   {
-    name: "Blazing Fast",
-    icon: "./icons/high-voltage.png",
+    name: "PostgreSQL",
+    icon: "./icons/postgres.png",
+  },
+  {
+    name: "Redux",
+    icon: "./icons/redux.png",
   },
 ]
 
