--- a/content/index/projects/backseatDriver/index.mdx
+++ b/content/index/projects/backseatDriver/index.mdx
@@ -1,14 +1,14 @@
 ---
 title: "Backseat Driver"
-category: null
-emoji: null
+category: ""
+emoji: ""
 screenshot: "./mdx-example.png"
 github: "https://github.com/2009-fsa-cs-sennas-strikers/Backseat-Driver"
 external: "https://backseat-driver-dbc21.web.app/"
 tags:
   - React
-  - NodeJS
-  - ThreeJS
+  - Node.JS
+  - Three.JS
   - Firebase
 visible: true
 position: 2
