--- a/content/index/projects/wbkMethod/index.mdx
+++ b/content/index/projects/wbkMethod/index.mdx
@@ -1,12 +1,14 @@
 ---
 title: "WBK Method"
-category: null
-emoji: null
+category: ""
+emoji: ""
 screenshot: "./clement-h-95YRwf6CNw8-unsplash.jpg"
 external: "https://apps.apple.com/us/app/wbk-method/id1571222680"
 tags:
   - React Native
-  - AWS
+  - AWS S3
+  - AWS Cognito
+  - AWS DynamoDB
 visible: true
 position: 1
 ---
