added wbk and backseat driver screenshots + more details

--- a/content/index/about/about.mdx
+++ b/content/index/about/about.mdx
@@ -1,8 +1,8 @@
 ---
 title: "About Me"
-image: "./charles-deluvio-DgoyKNgPiFQ-unsplash.jpg"
+image: "./bikeProfile.jpg"
 ---
 
 import Underlining from "../../../src/styles/underlining"
 
-I'm a software engineer trying to learn as much as I can
+I'm a software developer based in NYC
