--- a/content/index/projects/backseatDriver/index.mdx
+++ b/content/index/projects/backseatDriver/index.mdx
@@ -2,7 +2,7 @@
 title: "Backseat Driver"
 category: ""
 emoji: ""
-screenshot: "./mdx-example.png"
+screenshot: "./backseatScreenshot.png"
 github: "https://github.com/2009-fsa-cs-sennas-strikers/Backseat-Driver"
 external: "https://backseat-driver-dbc21.web.app/"
 tags:
@@ -14,4 +14,4 @@ visible: true
 position: 2
 ---
 
-A 3D driving simulation which utilizes user voice commands to control vehicle movement.
+A 3D driving simulation which utilizes user voice commands to control vehicle movement. This application was built with React, Three.JS, and utilizes Firebase on the backend. Using a pre-determined set of voice commands, a user guides a vehicle through a simulated city, attempting to arrive at the finish line as quick as possible.
