--- a/content/index/projects/wbkMethod/index.mdx
+++ b/content/index/projects/wbkMethod/index.mdx
@@ -2,7 +2,7 @@
 title: "WBK Method"
 category: ""
 emoji: ""
-screenshot: "./clement-h-95YRwf6CNw8-unsplash.jpg"
+screenshot: "./WBKScreens.png"
 external: "https://apps.apple.com/us/app/wbk-method/id1571222680"
 tags:
   - React Native
@@ -13,4 +13,4 @@ visible: true
 position: 1
 ---
 
-A fully deployed iOS Application that showcases a fitness coach's multimedia posts. This application was developed with React Native and AWS S3, Cognito and DynamoDB.
+A fully deployed iOS Application that showcases a fitness coach's multimedia posts. This application was developed with React Native and AWS S3, Cognito and DynamoDB. A user can navigate to multiple categories, view any media they would like to, and save any post into their favorites. Apple In-App Purchases are fully integrated into the app for new Users to seamlessly create new accounts. Currently only on iPhone.
