added more to about

--- a/content/index/about/about.mdx
+++ b/content/index/about/about.mdx
@@ -5,4 +5,5 @@ image: "./bikeProfile.jpg"
 
 import Underlining from "../../../src/styles/underlining"
 
-I'm a software developer based in NYC
+I'm a full stack software engineer based in NYC, currently specialized in React. I have immense passion for developing cutting edge and all-encompassing applications.
+I
